<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingTop="60dp"
    android:paddingBottom="100dp">

    <ImageView
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:backgroundTint="#C3DAFF"
        android:background="@drawable/ic_load_error"
        android:contentDescription="@null" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/loading_failed"
        android:textColor="#666666"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/loading_failed_desc"
        android:textColor="#999999"
        android:textSize="12sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/btnRetry"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_news_retry_button"
        android:gravity="center"
        android:text="@string/retry"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>
